--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -75,6 +75,18 @@
         app:layout_constraintVertical_bias="0.022" />
 
 
+    <TextView
+        android:id="@+id/lihat_saham"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Selengkapnya >>"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.947"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.113" />
+
     <ImageView
         android:layout_width="11dp"
         android:layout_height="40dp"
@@ -87,43 +99,43 @@
         app:layout_constraintVertical_bias="0.212" />
 
     <TextView
-        android:id="@+id/tgl_promo1"
+        android:id="@+id/tren_harga1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="03 maret 2021"
+        android:text="- 2,3%"
         android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
+        app:layout_constraintHorizontal_bias="0.949"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.199" />
 
     <TextView
-        android:id="@+id/namapromo1"
+        android:id="@+id/detail_saham1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cashback 30%"
+        android:text="Bank Central Asia (BCA)"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintHorizontal_bias="0.238"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.199" />
+
 
     <TextView
-        android:id="@+id/detail_promo1"
+        android:id="@+id/aset_saham1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Setiap pembayaran listrik"
+        android:text="Rp. 50,232,242"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.233"
+        app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.257" />
-
+        app:layout_constraintVertical_bias="0.256" />
 
     <ImageView
         android:layout_width="11dp"
@@ -137,48 +149,48 @@
         app:layout_constraintVertical_bias="0.42" />
 
     <TextView
-        android:id="@+id/tgl_promo2"
+        android:id="@+id/tren_harga2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="21 februari 2021"
-        android:textColor="@color/red"
+        android:text="+ 3,7%"
+        android:textColor="@color/green"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.326" />
-
-    <TextView
-        android:id="@+id/namapromo2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Beli 2 Gratis 1"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.183"
+        app:layout_constraintHorizontal_bias="0.956"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.396" />
 
     <TextView
-        android:id="@+id/detail_promo2"
+        android:id="@+id/detail_saham2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Setiap pembelian minuman"
+        android:text="Alam Sutra (ASRI)"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
+        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.396" />
+
+    <TextView
+        android:id="@+id/aset_saham2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rp. 45.452.730"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.193"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.452" />
 
     <TextView
-        android:id="@+id/history"
+        android:id="@+id/rekomendasi_saham"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="History"
+        android:text="Rekomendasi"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
@@ -188,115 +200,98 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.575" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/group_7"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/history"
-        app:layout_constraintVertical_bias="0.141" />
 
     <TextView
-        android:id="@+id/nama_history1"
+        android:id="@+id/lihat_rekomendasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pemasukan"
+        android:text="Selengkapnya >>"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.947"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.644" />
+
+    <TextView
+        android:id="@+id/rekomendasi1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ace Hardware"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.253"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.692" />
+        app:layout_constraintVertical_bias="0.741" />
+
 
     <TextView
-        android:id="@+id/detail_history1"
+        android:id="@+id/tren_rekomendasi1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3,000,0000"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.953"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.69" />
-
-    <ImageView
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:src="@drawable/group_8"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/history"
-        app:layout_constraintVertical_bias="0.446" />
-
-    <TextView
-        android:id="@+id/nama_history2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bayar Listrik"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.257"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.795" />
-
-    <TextView
-        android:id="@+id/detail_history2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="100,000"
+        android:text="+ 4,67%"
+        android:textColor="@color/green"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.795" />
+        app:layout_constraintVertical_bias="0.741" />
 
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cart_1"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/history"
-        app:layout_constraintVertical_bias="0.755" />
 
     <TextView
-        android:id="@+id/nama_history3"
+        android:id="@+id/rekomendasi2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Belanja Bulanan"
+        android:text="Astra Internasional"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
+        app:layout_constraintHorizontal_bias="0.211"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.905" />
+        app:layout_constraintVertical_bias="0.84" />
 
     <TextView
-        android:id="@+id/detail_history3"
+        android:id="@+id/tren_rekomendasi2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="500,000"
+        android:text="+ 2,14%"
+        android:textColor="@color/green"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.905" />
+        app:layout_constraintVertical_bias="0.84" />
+
+    <TextView
+        android:id="@+id/rekomendasi3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Xl Axiata"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.927" />
+
+    <TextView
+        android:id="@+id/tren_rekomendasi3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="- 1,63%"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.927" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_menu"
