--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow">#FFC16D</color>
     <color name="grey">#E9E9E9</color>
     <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
 </resources>
